--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
         </section>
     
     <!-- "About Me" section -->
-    <section id="aboutme" class="intro">
+    <section class="intro">
       <h2>About Me</h2>
-      <p2> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque quasi maxime repellat, ab, nesciunt eos quia eius consequatur fugiat totam, tenetur nostrum? Expedita vitae quo exercitationem laudantium quidem officia? Totam.</p2>
+      <div>
+      <p2 class="about"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque quasi maxime repellat, ab, nesciunt eos quia eius consequatur fugiat totam, tenetur nostrum? Expedita vitae quo exercitationem laudantium quidem officia? Totam.</p2>
+      </div>
     </section>
     
     <!-- "My Work" section -->
     <section id="mywork">
       <h2>My Work</h2>
         <div id="box">
-        <a class="flexbox-item-1" href="https://khuggins1.github.io/run-buddy/"></a>
+        <a class="flexbox-item-1" href="https://github.com/AidanGuarniere/forum-finder.git"></a>
         <a class="flexbox-item-2" href="https://clhurlbut.github.io/virtual_fortune_cookie/"></a>
       </div>  
     </section>
